indexer: compute everything before saving